Checkpoint of seven-segment display code, not working yete

--- a/src/Makefile
+++ b/src/Makefile
@@ -51,7 +51,8 @@ SRC =	$(TARGET).c \
 	controller.c \
 	serial_controller.c \
 	parallel_controller.c \
-	input_filter.c
+	input_filter.c \
+	seven_segment_display.c
 
 # MCU name, you MUST set this to match the board you are using
 # type "make clean" after changing this, so all files will be rebuilt
