Added APM counter that currently only counts the total number of actions
The APM counter does not yet account for time, it just counts total
actions.

--- a/src/Pew-Pew-Stick.vcproj
+++ b/src/Pew-Pew-Stick.vcproj
@@ -88,6 +88,14 @@
 			</File>
 		</Filter>
 		<File
+			RelativePath=".\apm_counter.c"
+			>
+		</File>
+		<File
+			RelativePath=".\apm_counter.h"
+			>
+		</File>
+		<File
 			RelativePath=".\input_filter.c"
 			>
 		</File>
